Services Tab overlap issue fixed

--- a/psycho.css
+++ b/psycho.css
@@ -127,6 +127,23 @@ main{
         transform: translateX(-100%);
     }
 }
+h4{
+    font-size: 2rem;
+}
+.service
+{
+    align-self: start;
+    font-size:1rem;
+    background-color: rgb(255, 255, 255);
+    margin-bottom: 20vw;
+    border-radius: 20px;
+    border: 3px solid rgb(203, 203, 203);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+}
+.list
+{
+    padding:1vw;
+}
 footer {
     bottom:0;
     margin: 0.1%;
@@ -140,7 +157,6 @@ footer {
     align-content: center;
     justify-content: center;
 }
-
 @media(max-width:640px)
 {
     .content-1
@@ -201,12 +217,19 @@ footer {
 button{
     height:10vw;
 }
+.list{
+    list-style:none;
+    padding-bottom: 5vw;
+}
 }
 @media(min-width:1000px)
 {
     *{
         margin-left: 2vw;
         margin-right:1vw
+    }
+    .menu{
+        font-size: 1.2rem;
     }
     main{
         align-self:start;
@@ -229,6 +252,9 @@ button{
         width:40vw;;
         align-content: center;
         flex-grow: 4;
+    }
+    .service{
+        font-size: 1.5rem;
     }
     .group{
         padding: auto;
